Upated requirement.txt file

--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,4 +1,16 @@
-streamlit>=1.29.0 
-requests==2.31.0 
-python-dotenv==1.0.0 
-plotly>=5.18.0
+# streamlit>=1.29.0 
+# requests==2.31.0 
+# python-dotenv==1.0.0 
+# plotly>=5.18.0
+
+# --- Environment & Configuration ---
+python-dotenv>=1.0.0,<2
+
+# --- Networking & HTTP Clients ---
+requests>=2.31.0,<3
+
+# --- Visualization ---
+plotly>=5.18.0,<6
+
+# --- UI / App Framework ---
+streamlit>=1.29.0,<2
